<resources>
    <string name="app_name">BulletinBoard</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="inter_id">ca-app-pub-3940256099942544/1033173712</string>
    <!-- Menu Drawer Strings -->
    <string name="ad_cat1_ads">Объявления</string>
    <string name="ad_my_adds">Мои объявление</string>
    <string name="ad_my_favs">Избранные объявление</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_phone">Смартфоны</string>
    <string name="ad_dm">Техника</string>
    <string name="ad_cat2_acc">Аккаунт</string>
    <string name="remove_ads">Удалить рекламу</string>
    <string name="ad_sign_up">Регистрация</string>
    <string name="ad_sign_in">Вход</string>
    <string name="ad_sign_out">Выход</string>
    <string name="def">Разное</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>
    <!-- Sign Dialogs -->
    <string name="email_reset_password_was_sent">Reset Email</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_email_done">На вашу почту была отправленна ссылка для верификации</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите email адрес</string>
    <!-- Account Dialogs -->
    <string name="link_done">Email успешно синхронизирован</string>
    <string name="entry_to_g">У Вас уже есть аккаунт Google.</string>
    <!-- MainActivity  -->
    <string name="guest">Гость</string>
    <string name="purchase_thanks">Спасибо за покупку</string>
    <string name="purchase_failed">Не удалось осуществить покупку</string>
    <!-- EditActivity  -->
    <string name="select_country">*Выберите страну</string>
    <string name="select_city">*Выберите город</string>
    <string name="select_category">*Выберите категорию</string>
    <string name="category">Категория</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">*Название объявления</string>
    <string name="no_country_selected">No country selected</string>
    <string name="country">Страна</string>
    <string name="city">Город</string>
    <string name="index">Индекс</string>
    <string name="telephone">Телефон</string>
    <string name="tel_number">*Номер телефона</string>
    <string name="price">Цена</string>
    <string name="price_hint">*Цена</string>
    <string name="description">Описание</string>
    <string name="description_hint">*Описание</string>
    <string name="with_send">С отправкой</string>
    <string name="send">Отправка</string>
    <string name="publish">Опубликовать</string>
    <string name="publish_time">Время публикации : </string>
    <!-- DescActivity-->
    <string name="tel_desc">Телефон:</string>
    <!-- FilterActivity-->
    <string name="apply_filter">Применить фильтр</string>
    <string name="clear_filter">Очистить фильтр</string>

    <!-- Ad List Item  -->
    <string name="price_desc">Цена:</string>

    <!-- EditActivity ImageListFragment -->
    <string name="back">Back</string>
    <string name="max_pics_count">Максимальное количество 3 шт.</string>
    <string name="email_desc">Email:</string>
    <string name="country_desc">Страна:</string>
    <string name="city_desc">Город:</string>
    <string name="index_desc">Индекс:</string>
    <string name="with_sent_desc">С отправкой:</string>


</resources>