<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/placeholder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".act.EditAdsActivity">

    <ScrollView
        android:id="@+id/scrollViewMine"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/country"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSelectCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:text="@string/select_country" />

                    <LinearLayout
                        android:id="@+id/divider1"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal"></LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/city"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvSelectCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:padding="10dp"
                        android:text="@string/select_city" />

                    <LinearLayout
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal"></LinearLayout>


                    <TextView
                        android:id="@+id/tvTitleIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/index"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edIndex"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="@null"
                        android:ems="10"
                        android:hint="@string/index"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:id="@+id/divider4"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal">

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvTitleCheckbox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/send"
                        android:textColor="@color/green_main"
                        android:textStyle="bold" />

                    <CheckBox
                        android:id="@+id/checkBoxWithSend"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/with_send" />

                    <LinearLayout
                        android:id="@+id/divider4.2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:background="@color/green_main"
                        android:orientation="horizontal"></LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btFilterApply"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:text="@string/apply_filter"
                android:textColor="@color/green_main"
                android:visibility="visible" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>